# weir

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  book.toml  deny.toml
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
crates/weir/: Cargo.toml  README.md
crates/weir-bench/: Cargo.toml
crates/weir-bench/src/: main.rs
crates/weir-client/: Cargo.toml  README.md
crates/weir-client/examples/: health_check.rs  push_simple.rs  push_tls.rs
crates/weir-client/src/: lib.rs  tls.rs  unix.rs
crates/weir-client/tests/: client_server.rs  proptest_client.rs  protocol.rs
crates/weir-core/: Cargo.toml  README.md
crates/weir-core/src/: durability.rs  envelope.rs  error.rs  lib.rs  nack.rs  payload.rs  version.rs
crates/weir-core/tests/: conformance.rs  proptest_envelope.rs  reference_frames.rs
crates/weir-ctl/: Cargo.toml  README.md
crates/weir-ctl/src/: main.rs
crates/weir-rs/: Cargo.toml  README.md
crates/weir-rs/src/: lib.rs
crates/weir-server/: Cargo.toml  README.md
crates/weir-server/src/: lib.rs  main.rs  models.rs  queue.rs  worker.rs
crates/weir-server/src/config/: cli.rs  env.rs  file.rs  mod.rs
crates/weir-server/src/drain/: confirmed.rs  dead_letter.rs  mod.rs
crates/weir-server/src/metrics/: mod.rs  server.rs
crates/weir-server/src/sink/: clickhouse.rs  http.rs  mod.rs  mysql.rs  noop.rs  postgres.rs  sql_common.rs
crates/weir-server/src/socket/: connection.rs  mod.rs  peer.rs  tcp.rs  tls.rs
crates/weir-server/src/wab/: clock.rs  dst.rs  format.rs  mod.rs  recovery.rs  segment.rs
crates/weir-server/tests/: load.rs  load_tls.rs  system.rs  tls_client.rs  tls_listener.rs
crates/weir-server/tests/dst_seeds/: enospc_at_shutdown_seal.json  g_wab_1_eio_on_fdatasync.json  g_wab_3_crash_before_rename.json  interleaved_producer_flusher.json  panic_at_fsync_barrier.json  panic_supervisor_caps_out.json  torn_write_midbatch_false_ack.json
crates/weir-sink-sdk/: Cargo.toml  README.md
crates/weir-sink-sdk/src/: lib.rs
crates/weir-testkit/: Cargo.toml
crates/weir-testkit/src/: harness.rs  lib.rs  tls.rs  util.rs
crates/weir-wab/: Cargo.toml  README.md
crates/weir-wab/src/: format.rs  lib.rs
crates/weir-wab/tests/: segment_reader.rs
crates/weir/src/: lib.rs
demo/: README.md  crates.html  examples.html  index.html  version.js  weir.css
demo/clients/: c.html  go.html  java.html  py.html  ts.html
demo/console/: console.test.mjs  index.html  live.html  mock.js  mock.test.mjs  ops.html  ops.js
demos/: .gitignore  README.md
demos/c-wire-client/: Makefile  README.md  conformance.c  negative.c  telemetry.c  weir_conn.c  weir_conn.h  weir_wire.c  weir_wire.h
demos/go-wire-client/: README.md  client.go  conformance_test.go  go.mod  main.go  probe_test.go  wire.go
demos/java-wire-client/: README.md
demos/py-wire-client/: README.md
demos/py-wire-client/examples/: produce.py
demos/py-wire-client/scripts/: run_daemon.sh
demos/py-wire-client/tests/: test_conformance.py  test_live.py
demos/ts-wire-client/: README.md  package.json  tsconfig.json
demos/ts-wire-client/examples/: live-smoke.ts  request-logger.ts
demos/ts-wire-client/src/: client.ts  conformance.ts  wire.ts
deploy/: avg_benchmarks.py  run-sink-integration-tests.sh  run_bare_metal_bench.sh  smoke-test.sh
deploy/docker/: Dockerfile  docker-compose.yml  weir.toml.example
deploy/docker/test/: docker-compose.yml  init-clickhouse.sql  init-mysql.sql  init-postgres.sql
deploy/grafana/: gen-dashboards.py  weir-dashboard.json
deploy/grafana/dashboards/: weir-chaos.json  weir-high.json  weir-max.json  weir-med.json  weir-min.json
deploy/monitoring/: README.md  chaos-failmock.conf  chaos-probe.sh  docker-compose.yml  loadgen-loop.sh  loadgen.Dockerfile  prometheus.yml  smoke-test.sh  weir-chaos.toml  weir.toml
deploy/prometheus/: weir-alerts.yml
deploy/systemd/: README.md  weir-readiness.sh  weir.env.example  weir.service  weir.toml
docs/: README.md  SUMMARY.md  architecture.md  benchmarks.md  conformance.md  monitoring.md  test-roadmap.md  wab_format.md  wire_protocol.md
docs/benchmarks/: agent-count-tuning.md  bare-metal.md  batch-tuning.md  environments.md  history.md  latest.md  phase3-results.md  phase3-stage-after-bridge-removal.md  phase3-stage-baseline.md  snapshot-2026-06-13-beast.md  snapshot-2026-06-13-comparison.md  snapshot-2026-06-13-mac.md  weir-bench.md
docs/conformance/: gen_vectors.py  run_vectors.py  wire_v1_vectors.json
docs/explorations/: dst-plan-alternatives.md  dst-plan-ergonomics.md  dst-plan-roadmap.md  dst-plan-trait-seams.md  dst-plan.md  parked-future-directions.md  phase4-dst-harness.md  phase4-dst-scenarios.md  phase4-k8s-deployment.md  phase4-k8s-operator.md  phase4-observability.md  phase4-standout-architecture.md  phase4-wab-optimization.md  v1-feature-directions.md  v1-hardening-findings.md
docs/explorations/scan-2026-06-15/: SCAN.md  findings.json
docs/explorations/sweep-2026-06-14/: ESCALATIONS.md  FINDINGS.md  findings.json  gen_docs.py  status.json
docs/explorations/sweep-2026-06-15-night/: SWEEP.md  findings.json
docs/explorations/sweep-2026-06-16-tests/: SWEEP.md  findings.json
docs/getting-started/: install.md  integrating.md  quickstart.md
docs/operations/: configuration.md  tcp-mtls.md
docs/security/: container.md  socket-bind.md  threat-model.md
docs/superpowers/plans/: 2026-06-10-clickhouse-sink.md  2026-06-10-tcp-tls-listener.md  (+8 more)
docs/testing/: fuzzing.md  sink-integration.md  test-audit.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: envelope_parse.rs  wab_confirmed.rs
scripts/: avg_benchmarks.py  sync-demo-version.sh
tools/weir-console/: Cargo.toml  README.md
tools/weir-console/src/: lib.rs  main.rs  ops.rs  server.rs  wab.rs
tools/weir-console/static/: explorer.js  explorer.test.mjs  index.html  live.html  live.js  live.test.mjs  ops.html  ops.test.mjs
tools/weir-console/tests/: fixtures.rs  ops_api.rs  wab_api.rs
tools/weir-console/tests/fixtures/: mod.rs
tools/weir-console/tests/ops_support/: mod.rs
(+28 files in other folders)
