[workspace]
members = [
    "crates/weir-core",
    "crates/weir-wab",
    "crates/weir-sink-sdk",
    "crates/weir-server",
    "crates/weir-client",
    "crates/weir-ctl",
    "crates/weir-testkit",
]
exclude = ["tools/weir-console"]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2024"
# MSRV: edition 2024 needs 1.85, but the code uses `if let … && …` let-chains
# (stable 1.88), so 1.88 is the honest floor. Declared so a future bump is an
# explicit, visible change rather than a silent break for downstream consumers (S39).
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/miki-przygoda/weir"
homepage = "https://github.com/miki-przygoda/weir"

# Inter-crate dependency versions centralised here so a workspace version bump is
# a single edit, not one per dependent crate (the previous hardcoded
# `version = "1.0.0"` in every Cargo.toml was a next-bump footgun). Each crate
# refers to these with `weir-core = { workspace = true }`, etc.
[workspace.dependencies]
weir-core = { path = "crates/weir-core", version = "1.2.0" }
weir-wab = { path = "crates/weir-wab", version = "1.2.0" }
weir-sink-sdk = { path = "crates/weir-sink-sdk", version = "1.2.0" }
weir-client = { path = "crates/weir-client", version = "1.2.0" }

# Release-profile tuning for production builds and the load suite.
# - lto = "fat": cross-crate inlining. Build time ~2-3× slower; runtime
#   typically 5-15% faster on hot paths (the WAB / drain / socket
#   pipelines particularly benefit from inlining across crate boundaries).
# - codegen-units = 1: single LLVM compilation unit per crate. Lets the
#   optimiser see the entire crate at once. Same build-time/runtime
#   trade as LTO, complementary effect.
#
# panic = "abort" intentionally NOT set: the flusher supervisor
# (wab/mod.rs::run_with_panic_supervision) relies on `catch_unwind` to
# observe panics, which requires unwinding panics. With panic = "abort"
# the process would die on flusher panic instead of bumping the
# `weir_wab_flusher_panics` metric.
[profile.release]
lto = "fat"
codegen-units = 1
