[package]
name = "weir-client"
description = "Client library for the weir daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["weir", "client", "durability", "ingestion", "ipc"]
categories = ["network-programming", "database"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
tls = ["dep:rustls", "dep:rustls-pki-types"]

[dependencies]
weir-core = { path = "../weir-core", version = "1.0.0" }
crc32fast = "1"
rustls = { version = "0.23", optional = true }
rustls-pki-types = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
