[package]
name = "weir-client"
description = "Client library for the weir daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["weir", "client", "durability", "ingestion", "ipc"]
categories = ["network-programming", "database"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
tls = ["dep:rustls", "dep:rustls-pki-types"]

[dependencies]
weir-core = { workspace = true }
crc32fast = "1"
# Crypto provider unified on `ring` workspace-wide (no aws-lc-rs). default-features
# = false drops rustls's default aws_lc_rs provider; the client names the provider
# explicitly via `builder_with_provider(ring::default_provider())`.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"], optional = true }
rustls-pki-types = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
