[package]
name = "weir-core"
description = "Shared types, wire protocol, and error types for weir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crc32fast = "1.4"
# thiserror intentionally excluded: manual impl Error avoids syn/quote/proc-macro2
# as build-time deps on a security-sensitive types crate.
# serde intentionally excluded: payloads are opaque bytes to the core layer.

[dev-dependencies]
proptest = "1"
