[package]
name = "weir-core"
description = "Shared types, wire protocol, and error types for weir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["wire-protocol", "durability", "wal", "ingestion", "buffer"]
categories = ["network-programming", "encoding"]

[dependencies]
crc32fast = "1.4"
# bytes: tiny, ubiquitous, ~zero transitive deps; Payload = Bytes for O(1) drain clones.
bytes = "1"
# thiserror intentionally excluded: manual impl Error avoids syn/quote/proc-macro2
# as build-time deps on a security-sensitive types crate.
# serde intentionally excluded: payloads are opaque bytes to the core layer.

[dev-dependencies]
proptest = "1"
# serde_json is a TEST-ONLY dependency used by tests/conformance.rs to load the
# language-neutral conformance vectors (docs/conformance/wire_v1_vectors.json).
# This does not contradict the "serde intentionally excluded" note above: that
# concerns the crate's *runtime/published* surface (the daemon never links it).
# Parsed via serde_json::Value (no derive), so no proc-macro build deps are pulled.
serde_json = "1"
