[package]
name = "weir-ctl"
description = "Admin and inspection CLI for the weir daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["weir", "cli", "operations", "admin", "durability"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "weir-ctl"
path = "src/main.rs"

[dependencies]
weir-core = { path = "../weir-core", version = "1.0.0" }
weir-client = { path = "../weir-client", version = "1.0.0" }
# Shared on-disk WAB segment reader — lets `dl requeue` read dead-letter
# segments using the SAME parser the daemon uses, without pulling in the
# daemon's async/sink dep tree.
weir-wab = { path = "../weir-wab", version = "1.0.0" }
# clap with derive for the subcommand surface + env for the WEIR_WAB_DIR
# fallback on --wab-dir. The proc-macro build cost is already paid elsewhere in
# the workspace (serde derive, etc.).
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
# Test-only: the requeue tests hand-build dead-letter segment fixtures and need
# to compute the per-record CRC32 that SegmentReader verifies. Same crate +
# algorithm weir-wab uses internally.
crc32fast = "1.4"
