[package]
name = "weir-server"
description = "The weir daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "weir-server"
path = "src/main.rs"

[dependencies]
weir-core = { path = "../weir-core" }
crc32fast = "1.4"
crossbeam-channel = "0.5"
tokio = { version = "1", features = [
    "net",
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "signal",
] }
tracing = "0.1"
libc = "0.2"
core_affinity = "0.8"
prometheus-client = "0.22"
pico-args = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# thiserror is OK to add here even though weir-core deliberately excludes it
# (see weir-core/Cargo.toml comment): weir-server already pulls syn/quote/
# proc-macro2 via reqwest and mysql_async transitively, so the build-time
# cost is zero. Used by the sink error types in src/sink/*.
thiserror = "2"
# HTTP sink uses reqwest with rustls (no system OpenSSL). default-features off
# trims the dep surface; gzip/brotli/cookies/json/proxy are not needed for the
# one-POST-per-record sink protocol.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
] }
# sha2 is used by HttpSink to compute Idempotency-Key headers so endpoints
# can deduplicate retries that follow the drain's at-least-once contract.
# RustCrypto pure-Rust SHA-2, no system dependency.
sha2 = "0.10"
# MySQL sink: async client with pooling. default-features = false drops
# native-tls / flate2 / time-related features; we only need the connection,
# the protocol, and rustls for TLS to production servers.
mysql_async = { version = "0.34", default-features = false, features = [
    "minimal-rust",
    "rustls-tls",
] }
# Postgres sink: tokio-postgres + deadpool-postgres for connection pooling.
# Mirrors the MySQL sink's pool-based connection model.
tokio-postgres = "0.7"
deadpool-postgres = { version = "0.14", default-features = false, features = [
    "rt_tokio_1",
] }
# Postgres TLS connector — opt-in via the URL's `?sslmode=require` query
# parameter. aws-lc-rs is already the workspace's crypto provider (via
# reqwest's rustls and mysql_async); webpki-roots gives a bundled CA
# store so the sink doesn't depend on the host's system CA configuration.
# default-features = false keeps the dep surface tight; the explicit
# features pin both choices.
tokio-postgres-rustls = { version = "0.14", default-features = false, features = [
    "aws-lc-rs",
    "webpki-roots",
] }
# rustls and webpki-roots are already in the workspace transitively (via
# reqwest, mysql_async, tokio-postgres-rustls). Naming them here as direct
# deps lets postgres.rs construct the `ClientConfig` + `RootCertStore`
# explicitly. Default features kept ON: rustls's defaults pull in
# `aws_lc_rs` (the workspace crypto provider), `tls12`, `logging`,
# `prefer-post-quantum`, and `std` — all desirable for a server binary.
# default-features = false caused a "could not determine CryptoProvider"
# panic at `ClientConfig::builder()` time because cargo's feature
# unification across the multiple rustls dependents didn't carry
# `aws_lc_rs` through to OUR builder call site.
rustls = "0.23"
webpki-roots = "1"

[dev-dependencies]
weir-client = { path = "../weir-client" }
weir-testkit = { path = "../weir-testkit" }
ureq = "2"
