[features]
default = ["http-sink", "mysql-sink", "postgres-sink"]
# HTTP sink: POSTs each record to a configurable URL.
http-sink = ["dep:reqwest", "dep:sha2"]
# MySQL sink: writes batches via multi-row INSERT.
mysql-sink = ["dep:mysql_async", "_sql-sink"]
# PostgreSQL sink: writes batches via multi-row INSERT.
postgres-sink = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:tokio-postgres-rustls", "dep:webpki-roots", "dep:rustls", "_sql-sink"]
# ClickHouse sink: HTTP RowBinary batch inserts with a content-derived dedup token.
clickhouse-sink = ["dep:reqwest", "dep:sha2", "_sql-sink"]
# Internal: the shared sql_common module used by mysql-sink + postgres-sink + clickhouse-sink.
_sql-sink = []
# Per-stage latency instrumentation for the load suite. Off by default and
# carries ZERO cost in a normal build — adds Instant fields + histograms only
# when enabled. Build the binary with this to populate weir_stage_* metrics.
bench-trace = []
# Deterministic Simulation Testing harness for the WAB flusher (wab::dst).
# Off by default: the sim clock + fault-injecting segment store + invariant
# oracle compile only under `cargo test` or this feature, so release binaries
# contain zero sim code. Enable it to run the DST sweeps outside `cargo test`.
dst = []
# TCP listener with mutual TLS. Off by default: weir-server stays Unix-only
# unless explicitly built with --features tls.
tls = ["dep:tokio-rustls", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:arc-swap", "dep:x509-parser", "dep:rustls"]

[package]
name = "weir-server"
description = "The weir daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["durability", "write-buffer", "wal", "daemon", "ingestion"]
categories = ["database", "network-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "weir-server"
path = "src/main.rs"

[dependencies]
weir-core = { path = "../weir-core", version = "0.8.0" }
# Sink trait + error contract. Extracted into its own published crate so third
# parties can write sinks without depending on the daemon; the built-in sinks
# (http/mysql/postgres/clickhouse/noop) implement these traits.
weir-sink-sdk = { path = "../weir-sink-sdk", version = "0.8.0" }
crc32fast = "1.4"
crossbeam-channel = "0.5"
tokio = { version = "1", features = [
    "net",
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "signal",
] }
tracing = "0.1"
libc = "0.2"
core_affinity = "0.8"
prometheus-client = "0.22"
pico-args = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# thiserror is OK to add here even though weir-core deliberately excludes it
# (see weir-core/Cargo.toml comment): weir-server already pulls syn/quote/
# proc-macro2 via reqwest and mysql_async transitively, so the build-time
# cost is zero. Used by the sink error types in src/sink/*.
thiserror = "2"
# HTTP sink uses reqwest with rustls (no system OpenSSL). default-features off
# trims the dep surface; gzip/brotli/cookies/json/proxy are not needed for the
# one-POST-per-record sink protocol.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
], optional = true }
# sha2 is used by HttpSink to compute Idempotency-Key headers so endpoints
# can deduplicate retries that follow the drain's at-least-once contract.
# RustCrypto pure-Rust SHA-2, no system dependency.
sha2 = { version = "0.10", optional = true }
# MySQL sink: async client with pooling. default-features = false drops
# native-tls / flate2 / time-related features; we only need the connection,
# the protocol, and rustls for TLS to production servers.
mysql_async = { version = "0.34", default-features = false, features = [
    "minimal-rust",
    "rustls-tls",
], optional = true }
# Postgres sink: tokio-postgres + deadpool-postgres for connection pooling.
# Mirrors the MySQL sink's pool-based connection model.
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", default-features = false, features = [
    "rt_tokio_1",
], optional = true }
# Postgres TLS connector — opt-in via the URL's `?sslmode=require` query
# parameter. aws-lc-rs is already the workspace's crypto provider (via
# reqwest's rustls and mysql_async); webpki-roots gives a bundled CA
# store so the sink doesn't depend on the host's system CA configuration.
# default-features = false keeps the dep surface tight; the explicit
# features pin both choices.
tokio-postgres-rustls = { version = "0.14", default-features = false, features = [
    "aws-lc-rs",
    "webpki-roots",
], optional = true }
# rustls is shared between postgres-sink (postgres.rs ClientConfig/RootCertStore)
# and the tls feature (socket/tls.rs). Both feature entries list `dep:rustls`.
# Default features kept ON: rustls's defaults pull in `aws_lc_rs` (the workspace
# crypto provider), `tls12`, `logging`, `prefer-post-quantum`, and `std` — all
# desirable for a server binary. default-features = false caused a "could not
# determine CryptoProvider" panic at `ClientConfig::builder()` time because
# cargo's feature unification across the multiple rustls dependents didn't carry
# `aws_lc_rs` through to OUR builder call site.
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1", optional = true }
# TLS listener (feature = "tls"). tokio-rustls 0.26 tracks rustls 0.23.
# Pinned to the aws-lc-rs crypto provider already used across the workspace.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }
# Hot-reloadable ServerConfig (SIGHUP cert rotation without dropping conns).
arc-swap = { version = "1", optional = true }
# Client-cert CN extraction for tracing spans.
x509-parser = { version = "0.16", optional = true }

[dev-dependencies]
weir-client = { path = "../weir-client" }
weir-testkit = { path = "../weir-testkit" }
ureq = "2"
# Generates throwaway CA / server / client certs for the TLS integration tests.
rcgen = "0.13"
# Loads/saves pinned DST regression seeds (tests/dst_seeds/*.json) for the
# wab::dst harness. Only the seed-regression replay test touches JSON; the
# harness itself needs no serialisation at runtime.
serde_json = "1"
