[package]
name = "weir-sink-sdk"
description = "Sink trait and error contract for building sinks for the weir daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["weir", "sink", "ingestion", "database", "async"]
categories = ["database", "asynchronous"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
# The only dependency: weir-core, for the `Payload` type — a newtype wrapper over
# `bytes::Bytes` (not a re-export; see the R1 newtype rationale). Sink authors
# implement these traits without pulling in the daemon.
weir-core = { workspace = true }
