[package]
name = "weir-testkit"
description = "Test harness for spawning and driving weir-server in integration tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
weir-client = { workspace = true }
libc = "0.2"
rcgen = "0.13"
